--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -11,7 +11,7 @@ a {
 }
 
 /*  ========================================
-                PAGE NAVBAR 
+                PAGE NAVBAR
     ======================================== */
 
 #main-navbar {
@@ -21,8 +21,19 @@ a {
 }
 
 #main-navbar .navbar-brand > a {
-	color: white;
 	margin: 0.5em 0.2em;
+	-webkit-transition: all 200ms linear;
+	transition: all 200ms linear;
+}
+
+#main-navbar .navbar-brand > a > svg {
+	width: 20px;
+	height: 20px;
+	vertical-align: unset;
+}
+
+#main-navbar .navbar-brand > a > svg > path {
+	fill: white;
 	-webkit-transition: all 200ms linear;
 	transition: all 200ms linear;
 }
@@ -62,8 +73,8 @@ a {
 	transition: all 300ms linear;
 }
 
-#main-navbar.affix .navbar-brand > a {
-	color: #212529;
+#main-navbar.affix .navbar-brand > a > svg > path {
+	fill: #212529;
 	-webkit-transition: all 200ms linear;
 	transition: all 200ms linear;
 }
@@ -90,7 +101,7 @@ a {
 }
 
 /*  ========================================
-                PAGE HEADER 
+                PAGE HEADER
     ======================================== */
 
 #showcase.jumbotron {
@@ -139,11 +150,17 @@ a {
 	bottom: 10%;
 }
 
-#showcase.jumbotron .arrow-to-scroll-down .fa-chevron-down {
-	font-size: 1.35em;
-	color: white;
+#showcase.jumbotron .arrow-to-scroll-down > a > svg {
+	width: 19.91px;
+	height: 25px;
 	-webkit-animation: scrollDown 2s infinite;
 	animation: scrollDown 2s infinite;
+}
+
+#showcase.jumbotron .arrow-to-scroll-down > a > svg > path {
+	fill: white;
+	stroke: white;
+	stroke-width: 10px;
 }
 
 @-webkit-keyframes scrollDown {
@@ -185,7 +202,7 @@ a {
 }
 
 /*  ========================================
-              RESUME SECTION 
+              RESUME SECTION
     ======================================== */
 
 #about {
@@ -230,9 +247,13 @@ a {
 	color: rgba(255, 255, 255, 0.9);
 }
 
-#about .resume .resume.header .personal.information .primary-info a i {
+#about .resume .resume.header .personal.information .primary-info a > svg {
 	width: 18px;
-	text-align: center;
+	height: 16px;
+}
+
+#about .resume .resume.header .personal.information .primary-info a > svg > path {
+	fill: white;
 }
 
 #about .resume .resume.body {
@@ -391,14 +412,18 @@ footer {
 	padding: 1rem;
 }
 
-footer .social a {
-	font-size: 2rem;
-	color: white;
+footer .social a > svg {
+	width: 32px;
+	height: 47px;
 	margin: 0 0.3rem;
 }
 
+footer .social a > svg > path {
+	fill: white;
+}
+
 /*  ===================================
-          RESPONSIVE BEHAVIOUR 
+          RESPONSIVE BEHAVIOUR
     =================================== */
 
 @media (max-width: 1200px) {
@@ -464,5 +489,12 @@ footer .social a {
 
 	#about {
 		padding-top: 0;
+	}
+}
+
+@media (max-width: 576px) {
+	footer .social a > svg {
+		width: 25px;
+		height: 40px;
 	}
 }
