--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -26,6 +26,10 @@ a {
 	transition: all 200ms linear;
 }
 
+#main-navbar .navbar-brand > a:hover {
+	text-decoration: none;
+}
+
 #main-navbar .navbar-brand > a > svg {
 	width: 20px;
 	height: 20px;
